# llm-response-metadata

./: README.md  pyproject.toml
src/llm_response_metadata/: __init__.py  core.py
tests/: test_llm_response_metadata.py
